Side Drawer Added

--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,20 +1,21 @@
+/*MOBILE====================================*/
 .NavigationItem {
 	align-items: center;
 	height: 100%;
+	width: 100%;
 	box-sizing: border-box;
 	margin: 0;
-	display: flex;
+	display: block;
 }
 
 .NavigationItem a {
-	color: white;
 	border-bottom: 4px solid transparent;
 	box-sizing: border-box;
 	padding: 14px 10px;
 	height: 100%;
 	text-decoration: none;
 	display: block;
-	color: #ffd9a3;
+	color: red;
 }
 
 .NavigationItem a:hover,
@@ -22,5 +23,33 @@
 .NavigationItem .a {
 	background-color: #8f5c2c;
 	border-bottom: 3px solid #40a4c8;
-	box-sizing: border-box;
+}
+
+/*DESKTOP====================================*/
+@media (min-width: 500px) {
+	.NavigationItem {
+		align-items: center;
+		height: 100%;
+		box-sizing: border-box;
+		margin: 0;
+		display: flex;
+	}
+
+	.NavigationItem a {
+		border-bottom: 3px solid transparent;
+		box-sizing: border-box;
+		padding: 0px;
+		height: 100%;
+		text-decoration: none;
+		display: flex;
+		color: #ffd9a3;
+		align-items: center;
+	}
+
+	.NavigationItem a:hover,
+	.NavigationItem a:active,
+	.NavigationItem .a {
+		background-color: #8f5c2c;
+		border-bottom: 3px solid #40a4c8;
+	}
 }
