--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -1,11 +1,27 @@
 .NavigationItems {
-	height: 100;
+	height: 100%;
 	box-sizing: border-box;
 	display: flex;
-	margin: 0;
 	align-items: center;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
 	list-style: none;
 	font-size: 2vh;
 	color: inherit;
+}
+
+/*MOBILE============================================*/
+@media (max-width: 499px) {
+	.NavigationItems {
+		width: 100%;
+		height: auto;
+		box-sizing: border-box;
+		display: block;
+		margin: 10px 0;
+		align-items: center;
+		padding: 2px 2px;
+		list-style: none;
+		font-size: 2vh;
+		color: rgb(97, 97, 246);
+	}
 }
