--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -1,30 +1,3 @@
-/*MOBILE====================================*/
-.NavigationItem {
-	align-items: center;
-	height: 100%;
-	width: 100%;
-	box-sizing: border-box;
-	margin: 0;
-	display: block;
-}
-
-.NavigationItem a {
-	border-bottom: 4px solid transparent;
-	box-sizing: border-box;
-	padding: 14px 10px;
-	height: 100%;
-	text-decoration: none;
-	display: block;
-	color: red;
-}
-
-.NavigationItem a:hover,
-.NavigationItem a:active,
-.NavigationItem .a {
-	background-color: #8f5c2c;
-	border-bottom: 3px solid #40a4c8;
-}
-
 /*DESKTOP====================================*/
 @media (min-width: 500px) {
 	.NavigationItem {
@@ -38,7 +11,7 @@
 	.NavigationItem a {
 		border-bottom: 3px solid transparent;
 		box-sizing: border-box;
-		padding: 0px;
+		padding: 5px 10px;
 		height: 100%;
 		text-decoration: none;
 		display: flex;
@@ -51,5 +24,39 @@
 	.NavigationItem .a {
 		background-color: #8f5c2c;
 		border-bottom: 3px solid #40a4c8;
+	}
+}
+
+/*MOBILE========================================*/
+@media (max-width: 499px) {
+	.NavigationItem {
+		align-items: center;
+		height: 100%;
+		width: 100%;
+		box-sizing: border-box;
+		margin: 0;
+		display: block;
+	}
+
+	.NavigationItem a {
+		border-bottom: 4px solid transparent;
+		box-sizing: border-box;
+		padding: 14px 10px;
+		width: 100%;
+
+		height: 100%;
+		text-decoration: none;
+		display: block;
+		color: #ffa01b;
+		font-weight: 600;
+		margin: 0;
+	}
+
+	.NavigationItem a:hover,
+	.NavigationItem a:active,
+	.NavigationItem .a {
+		background-color: #8f5c2c;
+		border-bottom: 3px solid #40a4c8;
+		width: 100%;
 	}
 }
