--- a/src/components/Navigation/NavigationItems/NavigationItems.module.css
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.css
@@ -1,13 +1,16 @@
-.NavigationItems {
-	height: 100%;
-	box-sizing: border-box;
-	display: flex;
-	align-items: center;
-	margin: 0px;
-	padding: 0px;
-	list-style: none;
-	font-size: 2vh;
-	color: inherit;
+/*DESKTOP============================================*/
+@media (min-width: 500px) {
+	.NavigationItems {
+		height: 100%;
+		box-sizing: border-box;
+		display: flex;
+		align-items: center;
+		margin: 0px;
+		padding: 0px;
+		list-style: none;
+		font-size: 2vh;
+		color: inherit;
+	}
 }
 
 /*MOBILE============================================*/
