--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,21 +1,14 @@
 .Burger {
 	width: 50%;
 	margin: auto;
-	height: 230px;
+	height: 47vh;
 	overflow: scroll;
 	font-size: 1.12rem;
 	font-weight: bold;
 	text-align: center;
 }
 
-@media (min-width: 300px) and (min-height: 400px) {
-	.Burger {
-		width: 270;
-		height: 230;
-	}
-}
-
-@media (min-width: 500px) and (min-height: 700px) {
+@media (min-width: 500px) {
 	.Burger {
 		width: 400px;
 		height: 400px;
@@ -29,13 +22,6 @@
 	}
 }
 
-@media (min-width: 1000px) and (min-height: 700px) {
-	.Burger {
-		width: 600px;
-		height: 500px;
-	}
-}
-
 @media (min-width: 700) and (min-height: 1000px) {
 	.Burger {
 		width: 400px;
@@ -43,16 +29,24 @@
 	}
 }
 
+@media (min-width: 1000px) and (min-height: 700px) {
+	.Burger {
+		width: 600px;
+		height: 500px;
+	}
+}
+
 @media (min-width: 1000px) and (min-height: 1000px) {
 	.Burger {
 		width: 450px;
-		height: 450px;
+		height: 300px;
+		max-height: 100px;
 	}
 }
 
 @media (min-width: 1200px) and (min-height: 700px) {
 	.Burger {
-		width: 40%;
-		max-height: 550px;
+		width: 450px;
+		height: 450px;
 	}
 }
