--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -25,11 +25,11 @@
 	background-color: rgb(255, 247, 247);
 }
 
-.Input .Label {
+.Input label {
 	font: inherit;
 	font-weight: 400;
 	display: block;
-	/* box-sizing: border-box; */
+	box-sizing: border-box;
 }
 
 .Input .Error {
